--- a/08. 일정 관리 웹 애플리케이션 만들기/todo/src/components/TodoListItem.scss
+++ b/08. 일정 관리 웹 애플리케이션 만들기/todo/src/components/TodoListItem.scss
@@ -37,7 +37,14 @@
         color:#ff8787;
     }
 }
-
+.edit{
+    display: flex;
+    margin-right: 0.4rem;
+    border : 1px black solid;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
     & + &{
         border-top : 1px solid #dee2e6
     }
